# nova-2-omni-examples

./: .gitignore  LICENSE  README.md  README_ko.md  benchmark_ocr.py  benchmark_stt.py  main.py  pyproject.toml  requirements.txt  run_demo.sh
src/: common.py  document_analysis.py  image_editing.py  image_generation.py  multi_agent.py  object_detection.py  speech_understanding.py  streamlit_ui.py  video_understanding.py
src/eval_metrics/: ocr_metrics.py
